修正匯款資料、新增退換貨表格

--- a/app/views/cart/_show_order_form.html.erb
+++ b/app/views/cart/_show_order_form.html.erb
@@ -18,7 +18,7 @@
           </td>
           <td class="paymentDetail atm">
             <label for="order_payment_type_atm_transfer">
-              <span>匯款戶名：女駙服飾有限公司</span>　<span>國泰世華銀行 信義分行(總行代碼013)</span>　<span>帳號：888-88-888888-8</span><br>
+              <span>匯款戶名：女駙服飾有限公司</span>　<span>台北富邦銀行 安和分行(總行代碼012)</span>　<span>帳號：715-10-202484-1</span><br>
               ※ limited to Taiwan customers.
             </label>
           </td>
