--- a/app/views/cart/final_check.html.erb
+++ b/app/views/cart/final_check.html.erb
@@ -39,7 +39,7 @@ div ,td, p .noTransition {
                <p class="txtPayment"><%= @order.get_payment_type %></p>
             </td>
             <% if @order.payment_type == 'atm_transfer' %>
-              <td class="atm"><span>匯款戶名：女駙服飾有限公司</span>　<span>國泰世華銀行 信義分行(總行代碼013)</span>　<span>帳號：888-88-888888-8</span></td>
+              <td class="atm"><span>匯款戶名：女駙服飾有限公司</span>　<span>台北富邦銀行 安和分行(總行代碼012)</span>　<span>帳號：715-10-202484-1</span></td>
             <% end %>
         </tr>
       </table>
