--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -122,6 +122,9 @@ Please note that currently we only offer one time size or color exchanges. If yo
          </table><p></p><span class="note">*Customers using international credit cards, please note: The refund amount might change slightly due to currency rates.</span>
       </div>
     </div>
-    <p class="text-center"><button class="btn mainBtn" onClick="location.href='#'"><span>退換貨表格下載</span><br>International Return And Exchange<br>Form Download</button></p>
+    <p class="text-center">
+      <button class="btn mainBtn" onClick="window.open('/uploads/return_and_exchange_form/RETURN_AND_EXCHANGE_FORM_TW.pdf')"><span>退換貨表格下載</span></button>
+      <button class="btn mainBtn" onClick="window.open('/uploads/return_and_exchange_form/RETURN_AND_EXCHANGE_FORM.pdf')">International Return And Exchange Form Download</button>
+    </p>
   </div><!-- End .container -->
   <div class="xlg-margin"></div><!-- Space 間隔 -->
