--- a/app/views/useradmin/orders/show.html.erb
+++ b/app/views/useradmin/orders/show.html.erb
@@ -95,9 +95,9 @@
             <% if @order.payment_status == 'order_placed_ATM' && @order.payment_type == 'atm_transfer' && @order.accountinfo.nil? %>
               <p class="text-right">
                 付款方式： ATM轉帳<br>
-                匯款戶名：咖碼股份有限公司<br>
-                銀行：玉山銀行 敦南分行 (銀行代碼:808) <br>
-                帳號：0314-940-019559 <br>
+                匯款戶名：女駙服飾有限公司<br>
+                銀行：台北富邦銀行 安和分行(總行代碼012) <br>
+                帳號：715-10-202484-1 <br>
               </p>
               <hr>
 
