--- a/public/css/pageContact.css
+++ b/public/css/pageContact.css
@@ -27,6 +27,8 @@ body > iframe{display: none;}
 .title.policy { width: 630px; }
 .bgBottom.about { display: none; }
 #contact_content{padding: 20px;}
+.btn{white-space: normal;}
+.mainBtn{width:250px;height:70px;margin:0 30px;}
 @media (max-width: 1008px) {
 .layout.contact .input-group.input-container { width: 100%; display: table; margin-bottom: 10px; padding: 0; }
 .contact-email { float: left; }
