--- a/app/views/layouts/_front_shared_header.html.erb
+++ b/app/views/layouts/_front_shared_header.html.erb
@@ -13,7 +13,7 @@
               <span class="hide-for-xs">會員登出 Logout</span><span class="hide-for-lg"><span class="logout-menu-icon"></span></span> 
             <% end %>
             <%= link_to useradmin_root_path, class: "btn btn-custom dropdown-toggle" do %>
-              <span class="hide-for-xs"><%= "#{current_user.username} 您好" %></span><span class="hide-for-lg"><span class="login-menu-icon"></span></span> 
+              <span class="hide-for-xs"><%= "#{current_user.username} 我的帳號 My account" %></span><span class="hide-for-lg"><span class="login-menu-icon"></span></span> 
             <% end %>
           <% end %>
         </div>
