--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -103,7 +103,7 @@
                 <% end %>
 
                 <%= link_to useradmin_root_path, class: "btn btn-custom dropdown-toggle" do %>
-                  <span class="hide-for-xs"><%= "#{current_user.username} 您好" %></span><span class="hide-for-lg"><span class="login-menu-icon"></span></span> 
+                  <span class="hide-for-xs"><%= "#{current_user.username} 我的帳號 My account" %></span><span class="hide-for-lg"><span class="login-menu-icon"></span></span> 
                 <% end %>
 
               <% end %>
