--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -9,9 +9,9 @@
   <meta charset="utf-8">
   <title>Ladyboo</title>
 
-  <meta property="og:title" content="現在就試試看吧，加一點蕾絲，特調妳的性感甜美比例，妳將發現自己不同以往的美，多了新鮮想像，開始讓人著迷。 - LadyBoo">
+  <meta property="og:title" content="LadyBoo -女性時尚網購">
   <meta property="og:site_name" content="Ladyboo">
-  <meta property="og:description" content="時尚風格很多種，簡單不失個性的穿著，卻一向是 LadyBoo 最愛，比如說，只要簡單加一點點「蕾絲」，衣服的表情立刻繽紛起來，時尚品牌如專做蕾絲服飾的澳洲品牌Lover、義大利手工蕾絲 La Perla……等，都紛紛採用了新顏色、新設計、新花樣，顛覆過去「蕾絲＝老氣」，或「蕾絲只能性感」的印象，把女生的魅力和不同面貌鈎織出來，微微透露出性感、甜美、陽光、健康及更多可能性，LadyBoo 因為愛上這一半辛辣一半甜的美學，特地把蕾絲融入日常穿著，讓每個女生都能輕易穿搭我們精心設計或挑選的時尚單品。">
+  <meta property="og:description" content="LadyBoo 既是服飾品牌，同時也是讓女生開心、放鬆的穿衣間，在這裡，有我們關注的時尚話題與穿搭，也有對流行觀察的私密悄悄話，歡迎妳們隨時走進來，輕鬆挑選，穿出自己獨有的風格。">
   
   <meta property="og:image" content="<%= image_url('/images/fb-kv.jpg') %>">
   <meta property="og:type" content="website" />
