--- a/app/views/statics/size.html.erb
+++ b/app/views/statics/size.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_area do %>
+  <meta property="og:image" content="<%= image_url('/images/fb-kv.jpg') %>">
+<% end %>
 
 <% content_for :breadcrumb do %>
   <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; SIZE
