--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="/css/pageContact.css">
 
 <% content_for :meta_area do %>
+  <meta property="og:title" content="LadyBoo -女性時尚">
   <meta property="og:image" content="<%= image_url('/images/fb-kv.jpg') %>">
 <% end %>
 
