--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   
   <%= yield :meta_area %>
 
-  <meta property="og:site_name" content="LadyBoo -女性時尚網購">
+  <meta property="og:site_name" content="LadyBoo -女性時尚">
   <meta property="fb:app_id" content="380171498811984">
   <meta property="og:type" content="website" />
   <meta property="og:description" content="LadyBoo 既是服飾品牌，同時也是讓女生開心、放鬆的穿衣間，在這裡，有我們關注的時尚話題與穿搭，也有對流行觀察的私密悄悄話，歡迎妳們隨時走進來，輕鬆挑選，穿出自己獨有的風格。">
