--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <title>Ladyboo</title>
 
-  <meta property="og:title" content="LadyBoo -女性時尚網購">
+  <meta property="og:title" content="LadyBoo -女性時尚">
   <meta property="og:site_name" content="Ladyboo">
   <meta property="og:description" content="LadyBoo 既是服飾品牌，同時也是讓女生開心、放鬆的穿衣間，在這裡，有我們關注的時尚話題與穿搭，也有對流行觀察的私密悄悄話，歡迎妳們隨時走進來，輕鬆挑選，穿出自己獨有的風格。">
   
