--- a/app/views/statics/size.html.erb
+++ b/app/views/statics/size.html.erb
@@ -1,4 +1,5 @@
 <% content_for :meta_area do %>
+  <meta property="og:title" content="LadyBoo -女性時尚">
   <meta property="og:image" content="<%= image_url('/images/fb-kv.jpg') %>">
 <% end %>
 
