更換title、加入meta keywords&description

--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -7,7 +7,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ladyboo</title>
+  <title>Ladyboo -女性時尚</title>
 
   <meta property="og:title" content="LadyBoo -女性時尚">
   <meta property="og:site_name" content="Ladyboo">
@@ -18,8 +18,8 @@
   <meta property="og:url" content="<%= root_url %>">
   <meta property="fb:app_id" content="380171498811984">
   
-  <meta name="description" content="現在就試試看吧，加一點蕾絲，特調妳的性感甜美比例，妳將發現自己不同以往的美，多了新鮮想像，開始讓人著迷。 - LadyBoo">
-  
+  <meta name="description" content="LadyBoo是台灣女裝服飾購物網站，為女孩們搭配各式時尚穿搭，上衣、洋裝、禮服、外套、連身褲、內搭褲、短裙、睡衣，把蕾絲融入日常穿著，讓每個女生都能輕易穿搭我們精心設計或挑選的時尚單品。">
+  <meta name="keywords" content="ladyboo, 蕾絲, 長洋裝, 女裝, 長裙, 長裙穿搭, 內搭褲, 內搭褲 推薦, 小外套, 雪紡, 穿搭, ladybootw, 時尚, 禮服">
 
   <!--[if IE]> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
