--- a/app/views/layouts/useradmin.html.erb
+++ b/app/views/layouts/useradmin.html.erb
@@ -7,8 +7,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ladyboo</title>
-  <meta name="description" content="Responsive modern ecommerce Html5 Template">
+  <title>Ladyboo -女性時尚</title>
+  <meta name="description" content="LadyBoo是台灣女裝服飾購物網站，為女孩們搭配各式時尚穿搭，上衣、洋裝、禮服、外套、連身褲、內搭褲、短裙、睡衣，把蕾絲融入日常穿著，讓每個女生都能輕易穿搭我們精心設計或挑選的時尚單品。">
+  <meta name="keywords" content="ladyboo, 蕾絲, 長洋裝, 女裝, 長裙, 長裙穿搭, 內搭褲, 內搭褲 推薦, 小外套, 雪紡, 穿搭, ladybootw, 時尚, 禮服">
   <!--[if IE]> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link href='//fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic%7CPT+Gudea:400,700,400italic%7CPT+Oswald:400,700,300' rel='stylesheet' id="googlefont">
