--- a/app/views/admin/daily_reports/index.html.erb
+++ b/app/views/admin/daily_reports/index.html.erb
@@ -41,7 +41,7 @@ DailyReport - index<br>
   </tr>
 </table>
 <hr>
-<!-- <table class='table'>
+<table class='table'>
 <caption>歷史訂單狀態</caption>
   <tr>
     <td>處理中訂單(ACTIVE=A+B+C+D)</td> 
@@ -60,7 +60,7 @@ DailyReport - index<br>
     <td><%= @all_orders_count %></td>
   </tr>
 </table>
-<hr> -->
+<hr>
  
 <% unless @yesterday_report.blank? %>
 <table class='table'>
