--- a/app/views/admin/daily_reports/view_by_range.html.erb
+++ b/app/views/admin/daily_reports/view_by_range.html.erb
@@ -106,22 +106,10 @@ DailyReports - view by range and export by selecting scope
     <td><%= sort_link @q , :total_shipping_revenue, "運費營業額 S" %></td>
     <td><%= sort_link @q , :total_product_revenue, "產品營業額 T" %></td>
     <td><%= sort_link @q , :total_revenue, "營業額 S+T " %></td>
+    <td>成功下單%</td>
+    <td>跳出%</td>
   </tr>
-  <% @daily_reports.each do |report| %>
-    <tr>
-      <td><%= link_to report.name, admin_daily_report_path(report) %></td>
-      <td><%= report.total_order_count %></td>
-      <td><%= report.valid_order_count %></td>
-      <td><%= report.onhold_order_count %></td>
-      <td><%= report.completed_order_count %></td>
-      <td><%= report.cancel_order_count %></td>
-      <td><%= report.abnormal_end_order_count %></td>
-      <td><%= report.new_member_count %></td>
-      <td><%= report.total_shipping_revenue %></td>
-      <td><%= report.total_product_revenue %></td>
-      <td><%= report.total_revenue %></td>
-    </tr>
-  <% end %>
+  <%= render partial: 'tr_of_each_report', collection: @daily_reports, as: :report %>
 </table>
 <% else %>
 = 查無結果 =
